--- a/redessociais.html
+++ b/redessociais.html
@@ -90,17 +90,17 @@ Eventos • Sessões fotográficas
           <h2>Instagram feed</h2>
           <div class="owl-carousel owl-carousel4 owl-theme">
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/IMG_3677.jpg" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC2_0769.jpg" alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/DSC_0781.jpg"  alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC2_1615.JPG"  alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
 	       <div>
-              <div class="card"> <img class="card-img" src="assets/img/DSC_0173 2.jpg"  alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC2_0768.jpg  alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
