--- a/redessociais.html
+++ b/redessociais.html
@@ -100,7 +100,7 @@ Eventos • Sessões fotográficas
               </div>
             </div>
 	       <div>
-              <div class="card"> <img class="card-img" src="assets/img/DSC2_0768.jpg  alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC2_0768.jpg" alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
