--- a/redessociais.html
+++ b/redessociais.html
@@ -90,12 +90,12 @@ Eventos • Sessões fotográficas
           <h2>Instagram feed</h2>
           <div class="owl-carousel owl-carousel4 owl-theme">
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/DSC2_0769.JPG" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0769.JPG" alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
 	       <div>
-              <div class="card"> <img class="card-img" src="assets/img/DSC2_0768.JPG" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0768.JPG" alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
