--- a/orçamento.html
+++ b/orçamento.html
@@ -56,7 +56,7 @@
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Início</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
+          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre a dreamer</a></li>
           <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">Serviços</a></li>
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
