--- a/sobrenos.html
+++ b/sobrenos.html
@@ -57,7 +57,7 @@
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Início</a> </li>
-          <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
+          <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Sobre a dreamer</a></li>
           <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">serviços</a></li>
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
@@ -115,7 +115,7 @@ na área publicitária e eventos musicais.
 
 
 Aguardamos o seu contacto!</p>
-            <a href="#" class="btn">Faça já a sua marcação</a> </div>
+            <a href="orçamento.html" class="btn">Faça já a sua marcação</a> </div>
           </div>
         </div>
       </div>
