--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>DreamerPhotography</title>
-    <link rel="shorcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shorcut icon" href="assets/img/favicon.ico.png" type="image/x-icon">
 </head>
 
 <body>
