--- a/orçamento.html
+++ b/orçamento.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Orçamento</title>
+	<link rel="shorcut icon" href="assets/img/favicon.ico.png" type="image/x-icon">
 </head>
 
 <body>
