--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Portfólio</title>
+	<link rel="shorcut icon" href="assets/img/favicon.ico.png" type="image/x-icon">
 </head>
 
 <body>
@@ -56,7 +57,7 @@
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Início</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
+          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre a dreamer</a></li>
           <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">Serviços</a></li>
           <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
