--- a/redessociais.html
+++ b/redessociais.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Contacto</title>
+	<link rel="shorcut icon" href="assets/img/favicon.ico.png" type="image/x-icon">
 </head>
 
 <body>
@@ -58,7 +59,7 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Início</a></li>
           <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre Nós</a></li>
-          <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">serviços</a></li>
+          <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">serviços a dreamer</a></li>
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="orçamento.html" tabindex="-1" aria-disabled="true">orçamento</a></li>
