--- a/redessociais.html
+++ b/redessociais.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Contacto</title>
+  <title>Redes sociais</title>
 	<link rel="shorcut icon" href="assets/img/favicon.ico.png" type="image/x-icon">
 </head>
 
