--- a/redessociais.html
+++ b/redessociais.html
@@ -58,8 +58,8 @@
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Início</a></li>
-          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre Nós</a></li>
-          <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">serviços a dreamer</a></li>
+          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre a dreamer</a></li>
+          <li class="nav-item"> <a class="nav-link" href="serviços.html" tabindex="-1" aria-disabled="true">serviços</a></li>
           <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfólio</a></li>
           <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="orçamento.html" tabindex="-1" aria-disabled="true">orçamento</a></li>
