--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       "welcomeText":"Olá!\nComo posso ajudá-lo?",
       "messageText":"",
       "backgroundColor":"#c24414",
-      "ctaText":"Start Chat",
+      "ctaText":"Iniciar bate-papo",
       "borderRadius":"25",
       "autoShow":true,
       "phoneNumber":"244995681346"
