--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       "brandImg":"https://lh3.googleusercontent.com/bsbS5CF-GIsYMFhlgf63BVlvZ2i4aW7rqI5aQah8hC9CESv2Q7oMIFlQPVLYhxKy5_iLtg=s153",
       "welcomeText":"Olá!\nComo posso ajudá-lo?",
       "messageText":"",
-      "backgroundColor":"#4dc247",
+      "backgroundColor":"#c21b0e",
       "ctaText":"Iniciar bate-papo",
       "borderRadius":"25",
       "autoShow":true,
