--- a/redessociais.html
+++ b/redessociais.html
@@ -152,7 +152,7 @@ Eventos • Sessões fotográficas
       "backgroundColor":"#c21b0e",
       "ctaText":"Iniciar bate-papo",
       "borderRadius":"25",
-      "autoShow":true,
+      "autoShow":false,
       "phoneNumber":"244995681346"
   }
 };
