--- a/serviços.html
+++ b/serviços.html
@@ -166,7 +166,7 @@
       "backgroundColor":"#c21b0e",
       "ctaText":"Iniciar bate-papo",
       "borderRadius":"25",
-      "autoShow":true,
+      "autoShow":false,
       "phoneNumber":"244995681346"
   }
 };
