--- a/sobrenos.html
+++ b/sobrenos.html
@@ -207,7 +207,7 @@ Aguardamos o seu contacto!</p>
       "backgroundColor":"#c21b0e",
       "ctaText":"Iniciar bate-papo",
       "borderRadius":"25",
-      "autoShow":true,
+      "autoShow":false,
       "phoneNumber":"244995681346"
   }
 };
