--- a/orçamento.html
+++ b/orçamento.html
@@ -104,8 +104,8 @@
           <h2 class="card-title">Preços</h2>
 		  </a>
 		  <div class="row single-blog">
-            <div style="background-color:black; width:50%; height:50%"
-		    <embed src="EVENTOS - TABELA DE PREÇOS.pdf" type="application/pdf"></embed>
+            <div style="background-color:black; width:50%; height:50px"
+		    <embed style="width:50%; height:50%" src="EVENTOS - TABELA DE PREÇOS.pdf" type="application/pdf"></embed>
             </div>
             <div class="col-xl-8 col-lg-12 single-blog__text">
               <h2>Fotografia sozinho custa kwz 1.000.000 (Um Milhão)</h2>
