--- a/orçamento.html
+++ b/orçamento.html
@@ -105,12 +105,11 @@
 		  </a>
 		  <div class="row single-blog">
             <div>
-		    <iframe src="https://drive.google.com/file/d/1K7-0g8QlJ_vlTDgKI0fNUneRjgn_lkeB/preview" width="200" height="40" allow="autoplay"></iframe>
+		    <iframe src="https://drive.google.com/file/d/1K7-0g8QlJ_vlTDgKI0fNUneRjgn_lkeB/preview" width="400" height="360" allow="autoplay"></iframe>
             </div>
             <div class="col-xl-8 col-lg-12 single-blog__text">
-              <h2>Fotografia sozinho custa kwz 1.000.000 (Um Milhão)</h2>
-	      <p>Se reclamar, sobre para kwz 2.000.000 (Dois Milhões)</p>
-	      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis.</p>
+              <h2>Eventos (Aniversário, Noivados, Workshops, Baptismos)</h2>
+	      <p>#</p>
             </div>
           <div class="row single-blog">
             <div class="col-xl-4 col-lg-12 single-blog__img">
