--- a/orçamento.html
+++ b/orçamento.html
@@ -76,11 +76,11 @@
           <h2 class="card-title">Preços</h2>
 		  </a>
 	  <div class="row single-blog">
-            <div class="col-xl-8 col-lg-12 single-blog__text">
+            <div class="col-xl-8 col-lg-12 single-blog__text" style="align:center">
               <h2>Eventos (Aniversário, Noivados, Workshops, Baptismos)</h2>
 	      <p>#</p>
 	    </div> 
-            <div>
+            <div style="align: center">
 		 <iframe src="https://drive.google.com/file/d/1K7-0g8QlJ_vlTDgKI0fNUneRjgn_lkeB/preview" width="800" height="700" allow="autoplay"></iframe>
             </div>
           </div>
