--- a/orçamento.html
+++ b/orçamento.html
@@ -65,6 +65,33 @@
       </div>
     </div>
   </nav>
+	
+	<div class="container-fluid fh5co-home-banner">
+    <div class="card"> <img class="card-img" src="assets/img/dreamer1.png" alt="">
+      <div class="card-img-overlay">
+        <div class="center-text">
+          <h2 class="card-title"></h2>
+          <a href="#hey" class="btn">
+            <svg width="201" height="51" viewBox="0 0 201 51">
+              <defs>
+                <style>
+                .cls-1 {
+                  fill: none;
+                  stroke-width: 1px;
+                  stroke: url(#linear-gradient);
+                }
+              </style>
+              <linearGradient id="linear-gradient" x1="140.508" y1="50.5" x2="60.492" y2="0.5" gradientUnits="userSpaceOnUse">
+                <stop offset="0" stop-color="#e90e65"/>
+                <stop offset="1" stop-color="#fff"/>
+              </linearGradient>
+            </defs>
+            <rect id="Rounded_Rectangle_1" data-name="Rounded Rectangle 1" class="cls-1" x="0.5" y="0.5" width="200" height="50" rx="25" ry="25"/>
+          </svg>
+        Explora</a> </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Blog content section -->
   <section class="fh5co-blog-content">
@@ -76,12 +103,12 @@
           <h2 class="card-title">Preços</h2>
 		  </a>
 	  <div class="row single-blog">
-            <div class="col-xl-8 col-lg-12 single-blog__text" align="center">
-              <h2>Eventos (Aniversário, Noivados, Workshops, Baptismos)</h2>
+            <div class="col-xl-8 col-lg-12 single-blog__text">
+              <h2 align="center">Eventos (Aniversário, Noivados, Workshops, Baptismos)</h2>
 	      <p>#</p>
 	    </div> 
-            <div align="center">
-		 <iframe src="https://drive.google.com/file/d/1K7-0g8QlJ_vlTDgKI0fNUneRjgn_lkeB/preview" width="800" height="700" allow="autoplay"></iframe>
+            <div>
+		 <iframe align="center" src="https://drive.google.com/file/d/1K7-0g8QlJ_vlTDgKI0fNUneRjgn_lkeB/preview" width="800" height="700" allow="autoplay"></iframe>
             </div>
           </div>
           <div class="row single-blog">
