--- a/orçamento.html
+++ b/orçamento.html
@@ -104,41 +104,31 @@
 		  </a>
 	  <div class="row single-blog">
             <div class="col-xl-8 col-lg-12 single-blog__text">
-              <h2 align="center">Eventos (Aniversário, Noivados, Workshops, Baptismos)</h2>
-	      <p>#</p>
+              <h2>Eventos (Aniversário, Noivados, Workshops, Baptismos)</h2>
+	      <p></p>
 	    </div> 
             <div>
-		 <iframe align="center" src="https://drive.google.com/file/d/1K7-0g8QlJ_vlTDgKI0fNUneRjgn_lkeB/preview" width="800" height="700" allow="autoplay"></iframe>
+		 <iframe src="https://drive.google.com/file/d/1eu4JI5hwdRyHnHTrDAgBoN1zBNk8npBd/preview" width="1000" height="700" allow="autoplay"></iframe>
             </div>
           </div>
-          <div class="row single-blog">
-            <div class="col-xl-4 col-lg-12 single-blog__img">
-              <img class="card-img w-100" src="assets/img/modelo11.jpg" alt="">
-            </div>
+		
+         <div class="row single-blog">
             <div class="col-xl-8 col-lg-12 single-blog__text">
-              <h2>Lorem ipsum dolor sit amet</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis. Nullam nulla nisi, malesuada vitae accumsan ac, blandit eu dui. Pellentesque ut ligula ex. Donec lacinia eros et arcu rhoncus, sit amet vestibulum justo efficitur. Nulla facilisi. Integer a sem aliquet, dapibus ipsum eu, vehicula dui. Fusce id leo tellus. Ut eu accumsan arcu. Aliquam at vestibulum felis.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis.</p>
+              <h2>CASAMENTOS</h2>
+	      <p></p>
+	    </div> 
+            <div>
+		 <iframe src="https://drive.google.com/file/d/1z7nC0oN4m6tPbLd2IrNE1IzqcacPfyRE/preview" width="1000" height="700" allow="autoplay"></iframe>
             </div>
           </div>
-          <div class="row single-blog">
-            <div class="col-xl-4 col-lg-12 single-blog__img">
-              <img class="card-img w-100" src="assets/img/modelo4.jpg" alt="">
-            </div>
+		
+	  <div class="row single-blog">
             <div class="col-xl-8 col-lg-12 single-blog__text">
-              <h2>Lorem ipsum dolor sit amet</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis. Nullam nulla nisi, malesuada vitae accumsan ac, blandit eu dui. Pellentesque ut ligula ex. Donec lacinia eros et arcu rhoncus, sit amet vestibulum justo efficitur. Nulla facilisi. Integer a sem aliquet, dapibus ipsum eu, vehicula dui. Fusce id leo tellus. Ut eu accumsan arcu. Aliquam at vestibulum felis.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis.</p>
-            </div>
-          </div>
-          <div class="row single-blog">
-            <div class="col-xl-4 col-lg-12 single-blog__img">
-              <img class="card-img w-100" src="assets/img/modelo9.jpg" alt="">
-            </div>
-            <div class="col-xl-8 col-lg-12 single-blog__text">
-              <h2>Lorem ipsum dolor sit amet</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis. Nullam nulla nisi, malesuada vitae accumsan ac, blandit eu dui. Pellentesque ut ligula ex. Donec lacinia eros et arcu rhoncus, sit amet vestibulum justo efficitur. Nulla facilisi. Integer a sem aliquet, dapibus ipsum eu, vehicula dui. Fusce id leo tellus. Ut eu accumsan arcu. Aliquam at vestibulum felis.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus tempus lorem sollicitudin sagittis. Vestibulum eu placerat tortor. Sed eu magna quis sapien ultricies euismod. Quisque ligula erat, tempus porttitor sem ac, congue malesuada nunc. Vestibulum lobortis turpis quis nisl commodo, vel scelerisque nisl fermentum. Cras scelerisque lectus eget aliquet auctor. Curabitur vestibulum orci ante, in bibendum dolor euismod quis.</p>
+              <h2>Sessões Fotográficas (Gestante, Recém-nascido, Book Pessoal, Família)</h2>
+	      <p></p>
+	    </div> 
+            <div>
+		 <iframe src="https://drive.google.com/file/d/1JzDQfuiI-EGr1KE0Z0FOwukl_tjn0ki1/preview" width="1000" height="700" allow="autoplay"></iframe>
             </div>
           </div>
         </div>
