--- a/orçamento.html
+++ b/orçamento.html
@@ -104,7 +104,7 @@
 		  </a>
 	  <div class="row single-blog">
             <div class="col-xl-8 col-lg-12 single-blog__text">
-              <h2>Eventos (Aniversário, Noivados, Workshops, Baptismos)</h2>
+              <h2>Eventos </h2>
 	      <p></p>
 	    </div> 
             <div>
@@ -124,7 +124,7 @@
 		
 	  <div class="row single-blog">
             <div class="col-xl-8 col-lg-12 single-blog__text">
-              <h2>Sessões Fotográficas (Gestante, Recém-nascido, Book Pessoal, Família)</h2>
+              <h2>Sessões Fotográficas</h2>
 	      <p></p>
 	    </div> 
             <div>
