--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   "enabled":true,
   "chatButtonSetting":{
       "backgroundColor":"#4dc247",
-      "ctaText":"WhatsApp",
+      "ctaText":"",
       "borderRadius":"25",
       "marginLeft":"0",
       "marginBottom":"50",
