--- a/orçamento.html
+++ b/orçamento.html
@@ -162,7 +162,7 @@
   "enabled":true,
   "chatButtonSetting":{
       "backgroundColor":"#4dc247",
-      "ctaText":"WhatsApp",
+      "ctaText":"",
       "borderRadius":"25",
       "marginLeft":"10",
       "marginBottom":"30",
