--- a/redessociais.html
+++ b/redessociais.html
@@ -136,10 +136,10 @@ Eventos • Sessões fotográficas
   "enabled":true,
   "chatButtonSetting":{
       "backgroundColor":"#4dc247",
-      "ctaText":"WhatsApp",
+      "ctaText":"",
       "borderRadius":"25",
-      "marginLeft":"0",
-      "marginBottom":"50",
+      "marginLeft":"20",
+      "marginBottom":"30",
       "marginRight":"50",
       "position":"left"
   },
