--- a/serviços.html
+++ b/serviços.html
@@ -150,10 +150,10 @@
   "enabled":true,
   "chatButtonSetting":{
       "backgroundColor":"#4dc247",
-      "ctaText":"WhatsApp",
+      "ctaText":"",
       "borderRadius":"25",
-      "marginLeft":"0",
-      "marginBottom":"50",
+      "marginLeft":"20",
+      "marginBottom":"30",
       "marginRight":"50",
       "position":"left"
   },
