--- a/sobrenos.html
+++ b/sobrenos.html
@@ -191,10 +191,10 @@ Aguardamos o seu contacto!</p>
   "enabled":true,
   "chatButtonSetting":{
       "backgroundColor":"#4dc247",
-      "ctaText":"WhatsApp",
+      "ctaText":"p",
       "borderRadius":"25",
-      "marginLeft":"0",
-      "marginBottom":"50",
+      "marginLeft":"20",
+      "marginBottom":"30",
       "marginRight":"50",
       "position":"left"
   },
