--- a/redessociais.html
+++ b/redessociais.html
@@ -101,7 +101,7 @@ Eventos • Sessões fotográficas
           </div>
         </div>
       </div>
-      <h2 class="text-center d-block">Encontre-me nas redes sociais</h2>
+      <h2 class="text-center d-block">Encontre-nos nas redes sociais</h2>
       <div class="row social-links">
         <ul class="nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="https://www.facebook.com/dreamerphotography5" target="_blank"><img src="assets/img/facebook.png" alt=""></a> </li>
