--- a/sobrenos.html
+++ b/sobrenos.html
@@ -191,7 +191,7 @@ Aguardamos o seu contacto!</p>
   "enabled":true,
   "chatButtonSetting":{
       "backgroundColor":"#4dc247",
-      "ctaText":"p",
+      "ctaText":"",
       "borderRadius":"25",
       "marginLeft":"20",
       "marginBottom":"30",
