--- a/testemunhos.html
+++ b/testemunhos.html
@@ -90,8 +90,10 @@
         </div>
         <div class="carousel-item">
           <div class="carousel-caption d-md-block"> <img src="assets/img/quote-icon.png" alt="">
-            <p>Foi incrível ter trabalhado com a DreamerPhotography, ajudaram-me a  descobrir o melhor que havia em mim, também mostraram-me o meu potencial como modelo. Gratidão! </p>
-         </div>
+		  <audio controls>
+                     <source src="wpp1.mp3" type="audio/mpeg">
+                 </audio>
+          </div>
         </div>
       </div>
       <ol class="carousel-indicators">
