--- a/testemunhos.html
+++ b/testemunhos.html
@@ -83,7 +83,7 @@
         </div>
         <div class="carousel-item active">
           <div class="carousel-caption d-md-block"> <img src="assets/img/quote-icon.png" alt="">
-		  <audio controls autoplay>
+		  <audio controls>
                      <source src="wpp.mp3" type="audio/mpeg">
                  </audio>
           </div>
