--- a/testemunhos.html
+++ b/testemunhos.html
@@ -99,7 +99,7 @@
       <ol class="carousel-indicators">
         <li data-target="#my-carousel" data-slide-to="0" > <img src="assets/img/teste1.jpg" alt=""> <span>Ricardo Rivaldo</span> </li>
         <li class="active" data-target="#my-carousel" data-slide-to="1" aria-current="location"> <img src="assets/img/teste2.jpg" alt=""> <span>Isabel</span> </li>
-        <li data-target="#my-carousel" data-slide-to="2"> <img src="assets/img/about-me-img3.png" alt=""> <span>Dominga E. Ngunza</span> </li>
+        <li data-target="#my-carousel" data-slide-to="2"> <img src="assets/img/teste3.jpg" alt=""> <span>Natacha João</span> </li>
       </ol>
     </div>
   </div>
