--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
   </nav>
   <div class="container-fluid fh5co-home-banner">
-    <div class="card"> <img class="card-img" src="assets/img/dreamer2.png" alt style="height: 600px;">
+    <div class="card"> <img class="card-img" src="assets/img/Blue.png" alt style="height: 600px;">
       <div class="card-img-overlay">
         <div class="center-text" style=" top: 300px;">
           <h2 class="card-title">Um clique de ouro</h2>
