--- a/orçamento.html
+++ b/orçamento.html
@@ -67,7 +67,7 @@
   </nav>
 	
 	<div class="container-fluid fh5co-home-banner">
-    <div class="card"> <img class="card-img" src="assets/img/Blue.png" alt="">
+    <div class="card"> <img class="card-img" src="assets/img/Blue.PNG" alt="">
       <div class="card-img-overlay">
         <div class="center-text">
           <h2 class="card-title"></h2>
